# screamer

./: .gitignore  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVGUIDE.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  pytest.ini  tasks.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-wheels.yml  docs.yml  tests.yml
.superpowers/sdd/: task-F-report.md
benchmarks/: __init__.py  make_plots.py  make_rank_plot.py  make_speed_chart.py  reference_impls.py  run_benchmarks.py
bindings/: bindings.cpp  bindings_core.cpp  bindings_dag.cpp  bindings_ew.cpp  bindings_expanding.cpp  bindings_fin.cpp  bindings_math.cpp  bindings_micro.cpp  bindings_misc.cpp  bindings_myfunctors.cpp  bindings_preprocessing.cpp  bindings_rolling.cpp  bindings_signal.cpp  bindings_streams.cpp
devtools/: __init__.py  build_function_index.py  build_help_registry.py  build_topic_pages.py  generate_screamer__init__.py  inject_nan_footnote.py  migrate_docs_v2.py  report_baselines.py  report_binding.py  report_class_args.py  report_docs.py  stream_diagrams.py  topics.py
devtools/baselines/: Abs.py  Butter.py  Clip.py  Diff.py  Elu.py  Erf.py  Erfc.py  EwKurt.py  EwMean.py  EwRms.py  EwSkew.py  EwStd.py  EwVar.py  EwZscore.py  Exp.py  ExpandingKurt.py  ExpandingMax.py  ExpandingMean.py  ExpandingMin.py  ExpandingProd.py  ExpandingSkew.py  ExpandingSlope.py  ExpandingStd.py  ExpandingSum.py  ExpandingVar.py  Ffill.py  FillNa.py  First.py  HawkesIntensity.py  Lag.py  Last.py  Linear.py  Log.py  LogReturn.py  NegPart.py  PosPart.py  Power.py  Relu.py  Return.py  RollingFracDiff.py  (+24 more)
devtools/data/: deribit.trades.btc-perpetual.20230804T000000.20230805T000000.csv  deribit.trades.eth-perpetual.20230804T000000.20230805T000000.csv  deribit_trade_download.py
devtools/design_experiments/: interface_v2.ipynb
devtools/prompts/: template_baseline.txt  template_doc.txt
docs/: ROADMAP_functions.md  ROADMAP_nanobind.md  by_group_index.rst  by_topic_index.rst  choosing_an_operator.md  conf.py  conventions.md  dag.md  function_index.txt  help_taxonomy.md  index.rst  installation.md  microstructure.md  multistream.md  nan_and_warmup.md  nan_policy.md  performance.md  pipelines.md  polymorphic_api.md  references_index.rst  streams_dag_api.md  topic_dag.rst  topic_ew.rst  topic_fin.rst  topic_math.rst  topic_misc.rst  topic_preprocessing.rst  topic_rolling.rst  topic_signal.rst  topic_streams.rst  topics.yml  usage.md
docs/by_group/: backtesting-risk.rst  data-prep.rst  indicators.rst  machine-learning.rst  math-logic.rst  microstructure.rst  smoothing-filters.rst  statistics.rst  streaming.rst
docs/by_topic/: activation.rst  activations.rst  arithmetic.rst  backtesting.rst  bands.rst  channels.rst  correlation.rst  cumulative.rst  data-handling.rst  filtering.rst  geometry.rst  graphs.rst  logic.rst  math.rst  microstructure.rst  missing-data.rst  momentum.rst  order-flow-arrivals.rst  order-flow-imbalance.rst  oscillator.rst  outliers.rst  price-impact.rst  regression.rst  returns.rst  risk.rst  signal-processing.rst  smoothing.rst  standardization.rst  statistics.rst  streams.rst  trade-signing.rst  transforms.rst  trend.rst  trig.rst  volatility.rst  volume.rst
docs/functions_dag/: Dag.md  Pipeline.md
docs/functions_ew/: EwBeta.md  EwCorr.md  EwCov.md  EwGarmanKlassVar.md  EwGarmanKlassVol.md  EwKurt.md  EwMean.md  EwParkinsonVar.md  EwParkinsonVol.md  EwRms.md  EwRogersSatchellVar.md  EwRogersSatchellVol.md  EwSkew.md  EwStd.md  EwVar.md  EwZscore.md
docs/functions_expanding/: ExpandingKurt.md  ExpandingMax.md  ExpandingMean.md  ExpandingMin.md  ExpandingProd.md  ExpandingSkew.md  ExpandingSlope.md  ExpandingStd.md  ExpandingSum.md  ExpandingVar.md
docs/functions_fin/: BacktestL1.md  BacktestL1Orders.md  BacktestL1Target.md  BacktestL1Trades.md  BacktestL1TradesOrders.md  BacktestOHLC.md  BacktestOHLCMaker.md  BacktestOHLCOrders.md  BacktestOHLCTarget.md  BacktestPriceTarget.md  BacktestReport.md  BacktestSignal.md  BacktestTrades.md  BacktestTradesMaker.md  BacktestTradesOrders.md  BacktestTradesTarget.md  BayesianRegression.md  Drawdown.md  LogReturn.md  MaxDrawdown.md  PerformanceRisk.md  ROC.md  ROCP.md  ROCR.md  RegressionFamily.md  Return.md  RollingAlpha.md  RollingBeta.md  RollingCVaR.md  RollingCalmar.md  RollingCorr.md  RollingCov.md  RollingDownsideDeviation.md  RollingFracDiff.md  RollingHitRate.md  RollingInfoRatio.md  RollingLinearRegression.md  RollingMaxDrawdown.md  RollingOmega.md  RollingPercentile.md  (+8 more)
docs/functions_math/: Abs.md  Acos.md  Add.md  And.md  Asin.md  Atan.md  Atan2.md  Cart2Polar.md  Ceil.md  Cos.md  Cube.md  Div.md  Elu.md  Equal.md  Erf.md  Erfc.md  Exp.md  Floor.md  GreaterEqual.md  GreaterThan.md  Hypot.md  IsFinite.md  IsNan.md  LessEqual.md  LessThan.md  Linear.md  Linear2.md  Log.md  Mul.md  NegPart.md  Not.md  (+17 more)
examples/: deribit_download.py  deribit_pairs_backtest.py  deribit_pairs_strategy.py  deribit_research.ipynb  deribit_streaming.py  lag_example.py
screamer/: __init__.py  _functor_params.py  backtest.py  dag.py  dag_io.py  dag_viz.py  microstructure.py  streams.py  supervised.py
tests/: __init__.py  _dag_oracle.py  param_cases.py  test_adx_and_volume.py  test_arithmetic.py  test_atr_family.py  test_backtest.py  test_baselines.py  test_bayesian_regression.py  test_build_help_registry.py  test_channels_and_yz.py  test_combine_latest_flush.py  test_cumulative.py  test_dag_build.py  test_dag_combine.py  test_dag_compile.py  test_dag_delay.py  test_dag_dropna.py  test_dag_engine.py  test_dag_exec.py  test_dag_identity.py  test_dag_io.py  test_dag_lazy.py  test_dag_public_api.py  test_dag_resample.py  test_dag_select.py  test_dag_stream.py  test_dag_viz.py  test_diff2.py  test_doc_coverage.py  test_dropna_node_backing.py  test_evalop.py  test_evalop_registry.py  test_ew_pair.py  test_expanding.py  test_filter_gate.py  test_filter_node_graph.py  test_first_last.py  test_fracdiff.py  test_functor_params.py  (+76 more)
(+466 files in other folders)
