[project]

name = "screamer"

version = "0.1.51"

requires-python = ">=3.11"

authors = [
  {name = "Thijs van den Berg", email = "thijs@sitmo.com"},
  {name = "Mohammadjavad Vakili", email = "mohammadjavad.vakili@gmail.com"}
]

maintainers = [
  {name = "Thijs van den Berg", email = "thijs@sitmo.com"},
  {name = "Mohammadjavad Vakili", email = "mohammadjavad.vakili@gmail.com"}
]

description = "Screamingly fast financial technical indicators with C++ performance and Python simplicity, built for both time series analysis and real-time, event-driven streaming."

readme = "README.md"

license = {text = "MIT License"}

dependencies = ["pybind11>=2.9"]

keywords = ["streaming", "indicators", "real-time", "algorithmic", "trading", "low-latency"]

classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/quantfinlib/screamer"
Documentation = "https://screamer.readthedocs.io/en/latest/"
Repository = "https://github.com/quantfinlib/screamer.git"
Issues = "https://github.com/quantfinlib/screamer/issues"
Changelog = "https://github.com/quantfinlib/screamer/blob/master/CHANGELOG.md"







[tool.poetry]
name = "screamer"
version = "0.1.51"
description = "Screamingly fast financial technical indicators with C++ performance and Python simplicity, built for both time series analysis and real-time, event-driven streaming."
authors = ["Thijs van den Berg <thijs@sitmo.com>, Mohammadjavad Vakili <mohammadjavad.vakili@gmail.com>"]
maintainers = [
    "Thijs van den Berg <thijs@sitmo.com>", 
    "Mohammadjavad Vakili <mohammadjavad.vakili@gmail.com>" 
]
license = "MIT"
readme = "README.md"
packages = [{ include = "screamer" }]


[tool.poetry.dependencies]
python = "^3.11"
pybind11 = "^2.9"

[tool.poetry.group.dev.dependencies]
bump-my-version = "^1.2"
invoke = "^2.2.0"
numpy = { version = "^2.0.1", python = ">=3.10"}
matplotlib = "^3.9.2"
pandas = "^2.2.3"
colorama = "^0.4.6"
ipykernel = "^6.29.5"

[tool.poetry.group.testing.dependencies]
pytest = "^7.0"
numpy = { version = "^2.0.1", python = ">=3.10"}
scipy = { version = "^1.14", python = ">=3.10"}
pandas = "^2.2.3"

[tool.poetry.group.docs.dependencies]
matplotlib = "^3.9.2"
numpy = { version = "^2.0.1", python = ">=3.10"}
sphinx = { version = "^8.1", python = ">=3.10" }
sphinx-rtd-theme = "^3.0.1"
sphinxcontrib-napoleon = "^0.7"
sphinx-autodoc-typehints = { version = "^2.5", python = ">=3.10" }
myst-parser = { version = "^4.0", python = ">=3.10" }
nbsphinx-link = "^1.3.0"
sphinx-exec-code = "^0.12"
sphinx-plotly-directive = "^0.1.3"
ipython = "8.14"

[tool.pytest.ini_options]
addopts = "--ignore=_skbuild"

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.bumpversion]
current_version = "0.1.51"
commit = true
tag = true
allow_dirty = false
message = "Bump version: {current_version} -> {new_version}"
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CMakeLists.txt"
search = "VERSION {current_version}"
replace = "VERSION {new_version}"

# screamer/__init__.py is autogenerated, but we patch the version line here
# so it stays in sync with pyproject.toml in the same commit. Otherwise the
# Makefile's regen step would have to run after the bump, splitting the
# version change across two commits.
[[tool.bumpversion.files]]
filename = "screamer/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

# ---------------------------------------------------------------------------
# cibuildwheel: produces portable wheels for Linux/macOS/Windows in CI.
# Local dev builds use the Makefile (which sets SCREAMER_NATIVE_ARCH=ON for
# max perf); CI explicitly leaves it OFF so wheels run on any CPU.
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
# Per-Python-version wheels for 3.11-3.14. Each new minor Python release
# requires adding to this list and re-releasing. See docs/ROADMAP_nanobind.md
# for the abi3 / stable-ABI path that would collapse this to one wheel
# covering 3.12+; pybind11 doesn't support stable ABI today, so we ship
# explicit per-version wheels for now.
build = "cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux_* *_i686 pp*"
build-verbosity = 1
test-requires = ["numpy"]
test-command = 'python -c "import numpy as np; from screamer import RollingMean; out = RollingMean(3)(np.arange(10.0)); assert abs(out[-1] - 8.0) < 1e-9, out"'

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

# macOS deployment target floor (>= 10.13) is enforced in CMakeLists.txt
# rather than via a cibuildwheel environment override -- the env-var path
# through scikit-build-core to cmake was unreliable.
