[project]

name = "screamer"

version = "0.10.0"

requires-python = ">=3.11"

authors = [
  {name = "Thijs van den Berg", email = "thijs@sitmo.com"}
]

maintainers = [
  {name = "Thijs van den Berg", email = "thijs@sitmo.com"}
]

description = "Screamingly fast financial technical indicators with C++ performance and Python simplicity, built for both time series analysis and real-time, event-driven streaming."

readme = "README.md"

license = {text = "MIT"}

dependencies = ["pybind11>=2.9"]

keywords = ["streaming", "indicators", "real-time", "algorithmic", "trading", "low-latency"]

classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/screamer-labs/screamer"
Documentation = "https://screamer.readthedocs.io/en/latest/"
Repository = "https://github.com/screamer-labs/screamer.git"
Issues = "https://github.com/screamer-labs/screamer/issues"
Changelog = "https://github.com/screamer-labs/screamer/blob/main/CHANGELOG.md"

# Optional install groups, PEP 621 style. Use with:
#   pip install -e .[test]   # runtime deps + pytest etc.
#   pip install -e .[docs]   # runtime deps + sphinx and friends
#   pip install -e .[dev]    # all of the above + release tooling
# These mirror [tool.poetry.group.*.dependencies] below for folks not
# on poetry. Build backend is scikit-build-core, so PEP 621 is canonical.
[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "numpy>=2.0",
    "scipy>=1.14",
    "pandas>=2.2",
    "PyYAML>=6.0",
]
# Pipeline visualization: Pipeline.to_graphviz() and the Jupyter SVG repr. Rendering also
# needs the system Graphviz `dot` binary (e.g. `brew install graphviz`,
# `apt install graphviz`). Pipeline.to_text() and Pipeline.to_dot() work without this.
viz = [
    "graphviz>=0.20",
]
# Cross-validation against independent third-party libraries. These
# tests are skipped when the libraries are not importable, so the
# group is opt-in. TA-Lib's Python wrapper requires its C library
# (e.g. `brew install ta-lib` on macOS, `apt install libta-lib0-dev`
# on Debian/Ubuntu) before `pip install TA-Lib` will work.
validation = [
    "TA-Lib>=0.6",
    "pandas-ta-classic>=0.5",
]
docs = [
    "sphinx>=8.1",
    "sphinx-rtd-theme>=3.0.1",
    "sphinxcontrib-napoleon>=0.7",
    "sphinx-autodoc-typehints>=2.5",
    "myst-nb>=1.1",
    "sphinx-exec-code>=0.12",
    "sphinx-plotly-directive>=0.1.3",
    "matplotlib>=3.9",
    "numpy>=2.0",
    "ipython>=8.14",
    "ipykernel>=6.29",
    "graphviz>=0.20",
]
dev = [
    "screamer[test,docs]",
    "bump-my-version>=1.2",
    "invoke>=2.2",
]







[tool.poetry]
name = "screamer"
version = "0.10.0"
description = "Screamingly fast financial technical indicators with C++ performance and Python simplicity, built for both time series analysis and real-time, event-driven streaming."
authors = ["Thijs van den Berg <thijs@sitmo.com>, Mohammadjavad Vakili <mohammadjavad.vakili@gmail.com>"]
maintainers = [
    "Thijs van den Berg <thijs@sitmo.com>" 
]
license = "MIT"
readme = "README.md"
packages = [{ include = "screamer" }]


[tool.poetry.dependencies]
python = "^3.11"
pybind11 = "^2.9"

[tool.poetry.group.dev.dependencies]
bump-my-version = "^1.2"
invoke = "^2.2.0"
numpy = { version = "^2.0.1", python = ">=3.10"}
matplotlib = "^3.9.2"
pandas = "^2.2.3"
colorama = "^0.4.6"
ipykernel = "^6.29.5"

[tool.poetry.group.testing.dependencies]
pytest = "^7.0"
numpy = { version = "^2.0.1", python = ">=3.10"}
scipy = { version = "^1.14", python = ">=3.10"}
pandas = "^2.2.3"
pyyaml = "^6.0"
nbmake = ">=1.4"
jupytext = ">=1.16"

# Optional cross-validation dependencies. Tests in
# tests/test_third_party_alignment.py skip gracefully when these are
# unavailable. Marked optional so a failed install (TA-Lib's C
# dependency in particular) doesn't break ordinary `poetry install`.
[tool.poetry.group.validation]
optional = true
[tool.poetry.group.validation.dependencies]
TA-Lib = "^0.6"
pandas-ta-classic = "^0.5"

[tool.poetry.group.docs.dependencies]
matplotlib = "^3.9.2"
numpy = { version = "^2.0.1", python = ">=3.10"}
sphinx = { version = "^8.1", python = ">=3.10" }
sphinx-rtd-theme = "^3.0.1"
sphinxcontrib-napoleon = "^0.7"
sphinx-autodoc-typehints = { version = "^2.5", python = ">=3.10" }
# myst-nb supersedes myst-parser (which it depends on) and renders the
# docs/notebooks/*.ipynb demo notebooks; ipykernel is the kernel it executes
# them with at build time.
myst-nb = { version = "^1.1", python = ">=3.10" }
sphinx-exec-code = "^0.12"
sphinx-plotly-directive = "^0.1.3"
ipython = "8.14"
ipykernel = "^6.29"
graphviz = "^0.20"

[tool.pytest.ini_options]
addopts = "--ignore=_skbuild"

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.bumpversion]
current_version = "0.10.0"
commit = true
tag = true
allow_dirty = false
message = "Bump version: {current_version} -> {new_version}"
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CMakeLists.txt"
search = "VERSION {current_version}"
replace = "VERSION {new_version}"

# screamer/__init__.py is autogenerated, but we patch the version line here
# so it stays in sync with pyproject.toml in the same commit. Otherwise the
# Makefile's regen step would have to run after the bump, splitting the
# version change across two commits.
[[tool.bumpversion.files]]
filename = "screamer/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

# ---------------------------------------------------------------------------
# cibuildwheel: produces portable wheels for Linux/macOS/Windows in CI.
# Local dev builds use the Makefile (which sets SCREAMER_NATIVE_ARCH=ON for
# max perf); CI explicitly leaves it OFF so wheels run on any CPU.
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
# Per-Python-version wheels for 3.11-3.14. Each new minor Python release
# requires adding to this list and re-releasing. See docs/ROADMAP_nanobind.md
# for the abi3 / stable-ABI path that would collapse this to one wheel
# covering 3.12+; pybind11 doesn't support stable ABI today, so we ship
# explicit per-version wheels for now.
build = "cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux_* *_i686 pp*"
build-verbosity = 1
test-requires = ["numpy"]
test-command = 'python -c "import numpy as np; from screamer import RollingMean; out = RollingMean(3)(np.arange(10.0)); assert abs(out[-1] - 8.0) < 1e-9, out"'

[tool.cibuildwheel.linux]
archs = ["x86_64"]
# manylinux_2_28 (Rocky Linux 8 / RHEL 8 base, gcc 12+). Required because
# numpy 2.x and many other modern wheels stopped shipping manylinux2014
# (manylinux_2_17) builds. With the older image, `pip install numpy` in
# the wheel-test step fell back to compiling from source, adding ~6 min
# per Python version. manylinux_2_28 has matching wheels available, so
# install is a fast download.
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
# MACOSX_DEPLOYMENT_TARGET is set at the workflow env level in
# .github/workflows/build-wheels.yml. We tried setting it here as
# `environment = { ... }` but cibuildwheel didn't propagate it to the
# wheel-tagging step.

[tool.cibuildwheel.windows]
archs = ["AMD64"]

